# leaffliction

./: .gitignore  Augmentation.py  Distribution.py  README.md  Transformation.py  cv2.pyi  predict.py  pyproject.toml  requiriments.txt  shared_utils.py  todo  train.py  trained_model.sha  training_metrics.csv  viewer.py
plantcv/: __init__.pyi  plantcv.pyi
plotly/: __init__.pyi  express.pyi
src/leaffliction/: Augmentation.py  Transformation.py  accuracy.py  distribution.py  metrics.py  predict.py  train.py  viewer.py
src/leaffliction.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/leaffliction/cli/: Augmentation.py  Distribution.py  Transformation.py  accuracy.py  metrics.py  predict.py  train.py  viewer.py
srcs/: Augmentation.py  Distribution.py  data_management.py  model_config.py  testing.py  train.py  train_loop.py
srcs/Train/: numbers.py  testing.py  train_loop.py
tabulate/: __init__.pyi
torchvision/transforms/: __init__.pyi
tqdm/: __init__.pyi
